# tilelang-mlir-ascend

.github/workflows/: base_ci.yml  build_ascend_npuir.yml  build_docker.yml  build_tilelang_wheel.yml  test_npuir_wheel.yml
src/transform/: npu_loop_vectorize.cc
testing/mlir/Transforms/: cv-split.mlir  infer-mem-scope.mlir
testing/npuir/active_ops/: test_elu.py  test_hardsigmoid.py  test_hardswish.py  test_hardtanh.py  test_leaky_relu.py  test_mish.py  test_softplus.py
testing/npuir/parallel_ops/: test_cast_parallel.py  test_floordiv_floormod_parallel.py
tilelang/engine/: lower.py
tilelang/jit/: jit_npu.py
tilelang/tladapter/transforms/: tilelangir.py
tilelangir/include/tilelangir/Transforms/: Passes.td
tilelangir/lib/Transforms/: CMakeLists.txt  CVSplit.cpp  EnableLocalBuffer.cpp  EnableMultiBuffer.cpp  InferMemScope.cpp  InsertCVSync.cpp  SplitMixKernel.cpp
tilelangir/tools/tilelangir-opt/: tilelangir-opt.cpp
